--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@
         }
 
         .app-shell {
+            margin-top: 20px;
+
             width: 100%;
             max-width: 414px;
             height: 100vh;
