Descripción breve de los cambiosssdsdx

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,10 @@
             transform: translateX(-50%) translateY(-120px);
             z-index: 1000; transition: transform 0.4s ease;
         }
+
+        #content-scroll {
+    padding-bottom: 4rem; 
+}
         #toast.show { transform: translateX(-50%) translateY(0); }
 
         .no-scrollbar::-webkit-scrollbar { display: none; }
