--- a/css/styles.css
+++ b/css/styles.css
@@ -171,4 +171,8 @@ button:active {
         padding: 0.4rem;
     }
     .nav-btn i { width: 18px; height: 18px; }
+    .view-container{
+        padding-top: 3rem;
+    }
+    
 }
